--- a/FootLand/templates/vendor_dashboard.html
+++ b/FootLand/templates/vendor_dashboard.html
@@ -208,6 +208,9 @@
                     <a href="{% url 'vendor_view_products' %}" class="nav-link {% if request.resolver_match.url_name == 'vendor_view_products' %}active{% endif %}">
                         <i class="fas fa-box"></i> View Products
                     </a>
+                    <a href="{% url 'vendor_offers' %}" class="nav-link {% if request.resolver_match.url_name == 'vendor_offers' %}active{% endif %}">
+                        <i class="fas fa-tags"></i> Offers & Promotions
+                    </a>
                     <a href="{% url 'vendor_performance_analytics' %}" class="nav-link {% if request.resolver_match.url_name == 'vendor_performance_analytics' %}active{% endif %}">
                         <i class="fas fa-chart-line"></i> Performance Analytics
                     </a>
