--- a/FootLand/templates/recommendations.html
+++ b/FootLand/templates/recommendations.html
@@ -62,14 +62,26 @@
                                                 <h6>Available Products with {{ material_info.name }}</h6>
                                                 {% for product in material_info.matching_products %}
                                                     <div class="card mb-2">
-                                                        <div class="card-body d-flex justify-content-between align-items-center">
-                                                            <div>
-                                                                <h6 class="mb-1">{{ product.name }}</h6>
-                                                                <p class="text-muted mb-0">₹{{ product.price }}</p>
+                                                        <div class="card-body">
+                                                            <div class="row">
+                                                                <div class="col-md-3">
+                                                                    {% if product.image %}
+                                                                        <img src="/media/{{ product.image }}" class="img-fluid" alt="{{ product.name }}">
+                                                                    {% endif %}
+                                                                </div>
+                                                                <div class="col-md-6">
+                                                                    <h6 class="mb-1">{{ product.name }}</h6>
+                                                                    <p class="text-muted mb-1">{{ product.brand }} - {{ product.type }}</p>
+                                                                    <p class="small mb-1">{{ product.description }}</p>
+                                                                    <p class="text-muted mb-0">Stock: {{ product.stock }}</p>
+                                                                </div>
+                                                                <div class="col-md-3 text-end">
+                                                                    <p class="h5 mb-2">₹{{ product.price }}</p>
+                                                                    <a href="{% url 'product_detail' product.id %}" class="btn btn-primary btn-sm">
+                                                                        View Details
+                                                                    </a>
+                                                                </div>
                                                             </div>
-                                                            <a href="{% url 'product_detail' product.id %}" class="btn btn-primary btn-sm">
-                                                                <i class="fas fa-shopping-cart"></i> Buy Now
-                                                            </a>
                                                         </div>
                                                     </div>
                                                 {% empty %}
